# tergite

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  CREDITS.md  CREDITS.rst  MANIFEST.in  README.md  README.rst  actual.json  bitbucket-pipelines.yml  demo.py  dot-tergiterc-template.txt  e2e_test.sh  job_on_tergite.py  pyproject.toml  requirements.txt  setup.py  tergiterc
.github/workflows/: ci.yml
demo/2023/June/: circuits.py  conf.py  example_train_save_load_eval.py  learning.py  utils.py  visuals.py  x_9_train_real_hw.py
dev/: mwe_openpulse.ipynb  mwe_openpulse.py  mwe_qiskit_runner_stub.ipynb  mwe_qiskit_runner_stub.py  test.ipynb  test.py
dev/archive/jupyter_notebooks/: aer_hex.ipynb  aer_tomography.ipynb  analyse-tomography.ipynb  batched_resonator_spec.ipynb  download-logfile.ipynb  external-resonator-spec-test.ipynb  gatecompile-testserver.ipynb  gatecompile.ipynb  interactive-calibration.ipynb  manual_calibration.ipynb  qasm-stub-test.ipynb  qubit-direct-calibration.ipynb  qubit-multiplexed-calibration.ipynb  rs.ipynb  rx-formula.ipynb  start-qiskit-connector.ipynb  test_gatecompile.ipynb  test_load_backend.ipynb  test_qasm_circuit.ipynb  test_state_discrimination.ipynb
dev/archive/python_files/: aer_hex.py  aer_tomography.py  analyse-tomography.py  batched_resonator_spec.py  check_distribution.py  compute_frames.py  demo_bloch_animation.py  demo_montecarlo_pi.py  demo_montecarlo_pi_backup.py  demo_montecarlo_pi_compare.py  demo_montecarlo_pi_refresh.py  download-logfile.py  external-resonator-spec-test.py  gatecompile-testserver.py  gatecompile.py  interactive-calibration.py  job_on_simulator.py  manual_calibration.py  multi_qubit_rotations.py  qasm-stub-test.py  qubit-direct-calibration.py  qubit-multiplexed-calibration.py  qubit_spec_analysis.py  rs.py  rx-formula.py  start-qiskit-connector.py  test_draw.py  test_gatecompile.py  test_load_backend.py  test_qasm_circuit.py  test_state_discrimination.py
dev/calibration/: Lefty_calibration_2022-10-25.csv  post_calibrations-to-MSS.ipynb  rabi_mwe.ipynb  rs_mwe.ipynb
dev/pip_env_dumps/: pip_env_full_dump_2021-06-11.txt  pip_env_full_dump_2022-11-15.txt
examples/notebooks/: hello_world.ipynb  hello_world_one-qubit.ipynb  hello_world_two-qubit.ipynb  one-qubit_example.ipynb  two-qubit_example.ipynb
examples/scripts/: hello_world.py
qiskit/providers/tergite/: __init__.py  backend.py  calibrations.py  config.py  example_device_properties.py  factory.py  hardcoded_backend_data.py  job.py  json_encoder.py  provider.py  provider_account.py  serialization.py  (+2 more)
tergite/: __init__.py
tergite-app/: README.md  app.py
tergite-app/static/: index.html
tergite/compat/: __init__.py
tergite/types/: backend.py  factory.py  job.py  provider.py  provider_factory.py
tergite/utils/: job_file.py  qobj.py  quantum_circuit.py
test_job_examples/: demo3.py  job_on_tergite.py  mwe_openpulse.py  mwe_qiskit_runner_stub.py
tests/: batched_resonator_spec.ipynb  bell_state.py  conftest.py  download-logfile.ipynb  download_logfile.ipynb  external-resonator-spec-test.ipynb  gatecompile.ipynb  job_on_simulator.py  job_on_tergite.py  manual_calibration.ipynb  multi_qubit_rotations.py  qasm-stub-test.ipynb  qasm_stub_test.ipynb  qubit-direct-calibration.ipynb  qubit-multiplexed-calibration.ipynb  remote-gatecompile.ipynb  rx-formula.ipynb  test_backend.py  test_get_backend.py  test_job_execution.py  test_provider.py
tests/analysis/: plot_fit_functions.py  spectroscopy_analysis.py
tests/archive/: demo1.py  demo2.py  demo3.py  example.qasm  external-resonator-spec-test.ipynb  job_on_simulator.py  job_on_tergite.py  manual_calibration.ipynb  qubit_spec_analysis.py  start-qiskit-connector.ipynb
tests/e2e/: conftest.py  test_job_execution.py
tests/fixtures/: calibrations.json  calibrations_v2.json  device_config.calib.toml  e2e-docker-compose.yml  e2e-runner.sh  e2e.env  frontend.env  loke.seed.toml  loke.toml  many_backends.json  mongo-init.js  mss-config.toml  provider_accounts.json  qiskit_pulse_1q.seed.toml  qiskit_pulse_1q.toml  qiskit_pulse_2q.seed.toml  qiskit_pulse_2q.toml  qobj_example.json  qobj_results.json  quantify-config.json  quantify-metadata.yml  spi_config.calib.toml
tests/integration/: conftest.py  test_get_backend.py  test_job_execution.py  test_provider.py
tests/qiskit/: test_get_backend.py  test_job_execution.py
tests/utils/: env.py  fixtures.py  qobj_tools.py  quantum_circuits.py  records.py  requests.py
(+102 files in other folders)
