[tool.poetry]
name = "tergite"
version = "2024.04.1"
description = "The SDK in the Tergite software stack for connecting to the Swedish quantum computer"
authors = [
    "Miroslav Dobsicek",
    "Axel Andersson",
    "Martin Ahindura",
    "Stefan Hill",
    "Abdullah-al Amin"
]
maintainers = [
    "Chalmers Next Labs AB <quantum.nextlabs@chalmers.se>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "tergite"}]
keywords = ["quantum-computer", "qiskit", "quantum", "tergite", "sdk"]
repository = "https://github.com/tergite/tergite"
homepage = "https://github.com/tergite/tergite"

[tool.poetry.dependencies]
python = "^3.8"
requests = ">=2.25.1"
qiskit-terra = "0.22.0"
pandas = ">=1.4.2"
qiskit-aer = ">=0.11.0"
qiskit-experiments = ">=0.4.0"
qiskit-ibmq-provider = ">=0.19.2"
qiskit-ignis = ">=0.7.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
python-dateutil = ">=2.8.1"
python-multipart = ">=0.0.5"
tqdm = ">=4.64.1"
more-itertools = ">=8.14.0"
matplotlib = ">=3.5.3"
matplotlib-inline = ">=0.1.6"
black = {extras = ["jupyter"], version = "^23.9.1"}
isort = "^5.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
