[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tergite"
authors = [
    { name = "Miroslav Dobsicek" },
    { name = "Axel Andersson" },
    { name = "Martin Ahindura" },
    { name = "Stefan Hill" },
    { name = "Abdullah-al Amin" },
    { name = "Adilet Tuleuov" },
]
maintainers = [
    {name = "Chalmers Next Labs AB", email = "contact@quantum.chalmersnextlabs.se"}
]
version = "2025.09.0"
description = "The SDK in the Tergite software stack for connecting to the Swedish quantum computer"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["quantum-computer", "qiskit", "quantum", "tergite", "sdk"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
    "qiskit>1,<1.3",
    "pandas>=1.4.2",
    "numpy>=1.26.0",
    "qiskit-ibm-runtime>=0.28.0",
    "h5py>=3.8.0",
    "pydantic>=2.5.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.2",
    "requests-mock>=1.11.0",
    "scikit-learn~=1.7.0"
]
dev = [
    "jupyter>=1.0.0",
    "python-dateutil>=2.8.1",
    "python-multipart>=0.0.5",
    "tqdm>=4.64.1",
    "more-itertools>=8.14.0",
    "matplotlib>=3.5.3",
    "matplotlib-inline>=0.1.6",
    "black[jupyter]~=25.1.0",
    "isort~=6.0.1"
]

[project.urls]
Homepage = "https://github.com/tergite/tergite"
Repository = "https://github.com/tergite/tergite"
Documentation = "https://github.com/tergite/tergite"
Issues = "https://github.com/tergite/tergite/issues"
Changelog = "https://github.com/tergite/tergite/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["tergite"]

[tool.isort]
skip_gitignore = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
